WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111063
[EFL][WTR] WTR cannot load injected bundle
https://bugs.webkit.org/show_bug.cgi?id=111063
Summary
[EFL][WTR] WTR cannot load injected bundle
Mikhail Pozdnyakov
Reported
2013-02-28 03:14:30 PST
SSIA. Source/WebKit2/WebProcess/InjectedBundle/efl/InjectedBundleEfl.cpp:45 load() Error loading the injected bundle from ./WebKitBuild/Debug/lib/libTestRunnerInjectedBundle.so: Wrong file format or no file module found
Attachments
patch
(1.59 KB, patch)
2013-02-28 04:05 PST
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2013-02-28 03:47:17 PST
Going further: ./WebKitBuild/Debug/lib/libTestRunnerInjectedBundle.so: undefined symbol: _ZN3WTR22AccessibilityUIElement19scrollToMakeVisibleEv
Mikhail Pozdnyakov
Comment 2
2013-02-28 04:05:54 PST
Created
attachment 190698
[details]
patch
Csaba Osztrogonác
Comment 3
2013-02-28 04:26:18 PST
Comment on
attachment 190698
[details]
patch rs=me
Mikhail Pozdnyakov
Comment 4
2013-02-28 04:30:13 PST
Committed
r144294
: <
http://trac.webkit.org/changeset/144294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug