[EFL][WTR] WTR cannot load injected bundle https://bugs.webkit.org/show_bug.cgi?id=111063

Reviewed by Csaba Osztrogonác.

WTR was not able to load injected bundle because of undefined
symbols for AccessibilityUIElement::scrollToMakeVisible().
Adding empty implementation of this function to AccessibilityUIElementAtk.cpp
solves the problem.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::scrollToMakeVisible):

git-svn-id: svn://svn.chromium.org/blink/trunk@144294 bbb929c8-8fbe-4397-9dbb-9b2b20218538