third_party/WebKit/Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp
@@ -1130,6 +1130,10 @@ PassRefPtr<AccessibilityTextMarker> AccessibilityUIElement::textMarkerForIndex(i
     return 0;
 }
 
+void AccessibilityUIElement::scrollToMakeVisible()
+{
+    // FIXME: implement
+}
 
 } // namespace WTR
 
